plugins/binding/capi/include/TellusimCMath.h

typedef struct TSVector2f {
	union {
		struct {
			float32_t x, y;
		};
		float32_t v[2];
	};
} TSVector2f;
typedef struct TSVector2d {
	union {
		struct {
			float64_t x, y;
		};
		float64_t v[2];
	};
} TSVector2d;
TS_CAPI TSVector2f* TS_CCALL tsVector2f_abs(TSVector2f *ret, const TSVector2f *v);
TS_CAPI TSVector2d* TS_CCALL tsVector2d_abs(TSVector2d *ret, const TSVector2d *v);
TS_CAPI TSVector2f* TS_CCALL tsVector2f_neg(TSVector2f *ret, const TSVector2f *v);
TS_CAPI TSVector2d* TS_CCALL tsVector2d_neg(TSVector2d *ret, const TSVector2d *v);
TS_CAPI TSVector2f* TS_CCALL tsVector2f_mul1(TSVector2f *ret, const TSVector2f *v0, float32_t v1);
TS_CAPI TSVector2d* TS_CCALL tsVector2d_mul1(TSVector2d *ret, const TSVector2d *v0, float64_t v1);
TS_CAPI TSVector2f* TS_CCALL tsVector2f_div1(TSVector2f *ret, const TSVector2f *v0, float32_t v1);
TS_CAPI TSVector2d* TS_CCALL tsVector2d_div1(TSVector2d *ret, const TSVector2d *v0, float64_t v1);
TS_CAPI TSVector2f* TS_CCALL tsVector2f_add1(TSVector2f *ret, const TSVector2f *v0, float32_t v1);
TS_CAPI TSVector2d* TS_CCALL tsVector2d_add1(TSVector2d *ret, const TSVector2d *v0, float64_t v1);
TS_CAPI TSVector2f* TS_CCALL tsVector2f_sub1(TSVector2f *ret, const TSVector2f *v0, float32_t v1);
TS_CAPI TSVector2d* TS_CCALL tsVector2d_sub1(TSVector2d *ret, const TSVector2d *v0, float64_t v1);
TS_CAPI TSVector2f* TS_CCALL tsVector2f_mul(TSVector2f *ret, const TSVector2f *v0, const TSVector2f *v1);
TS_CAPI TSVector2d* TS_CCALL tsVector2d_mul(TSVector2d *ret, const TSVector2d *v0, const TSVector2d *v1);
TS_CAPI TSVector2f* TS_CCALL tsVector2f_div(TSVector2f *ret, const TSVector2f *v0, const TSVector2f *v1);
TS_CAPI TSVector2d* TS_CCALL tsVector2d_div(TSVector2d *ret, const TSVector2d *v0, const TSVector2d *v1);
TS_CAPI TSVector2f* TS_CCALL tsVector2f_add(TSVector2f *ret, const TSVector2f *v0, const TSVector2f *v1);
TS_CAPI TSVector2d* TS_CCALL tsVector2d_add(TSVector2d *ret, const TSVector2d *v0, const TSVector2d *v1);
TS_CAPI TSVector2f* TS_CCALL tsVector2f_sub(TSVector2f *ret, const TSVector2f *v0, const TSVector2f *v1);
TS_CAPI TSVector2d* TS_CCALL tsVector2d_sub(TSVector2d *ret, const TSVector2d *v0, const TSVector2d *v1);
TS_CAPI TSVector2f* TS_CCALL tsVector2f_min(TSVector2f *ret, const TSVector2f *v0, const TSVector2f *v1);
TS_CAPI TSVector2d* TS_CCALL tsVector2d_min(TSVector2d *ret, const TSVector2d *v0, const TSVector2d *v1);
TS_CAPI TSVector2f* TS_CCALL tsVector2f_max(TSVector2f *ret, const TSVector2f *v0, const TSVector2f *v1);
TS_CAPI TSVector2d* TS_CCALL tsVector2d_max(TSVector2d *ret, const TSVector2d *v0, const TSVector2d *v1);
TS_CAPI TSVector2f* TS_CCALL tsVector2f_clamp(TSVector2f *ret, const TSVector2f *v, const TSVector2f *v0, const TSVector2f *v1);
TS_CAPI TSVector2d* TS_CCALL tsVector2d_clamp(TSVector2d *ret, const TSVector2d *v, const TSVector2d *v0, const TSVector2d *v1);
TS_CAPI TSVector2f* TS_CCALL tsVector2f_saturate(TSVector2f *ret, const TSVector2f *v);
TS_CAPI TSVector2d* TS_CCALL tsVector2d_saturate(TSVector2d *ret, const TSVector2d *v);
TS_CAPI float32_t TS_CCALL tsVector2f_dot(const TSVector2f *v0, const TSVector2f *v1);
TS_CAPI float64_t TS_CCALL tsVector2d_dot(const TSVector2d *v0, const TSVector2d *v1);
TS_CAPI float32_t TS_CCALL tsVector2f_cross(const TSVector2f *v0, const TSVector2f *v1);
TS_CAPI float64_t TS_CCALL tsVector2d_cross(const TSVector2d *v0, const TSVector2d *v1);
TS_CAPI float32_t TS_CCALL tsVector2f_length(const TSVector2f *v);
TS_CAPI float64_t TS_CCALL tsVector2d_length(const TSVector2d *v);
TS_CAPI TSVector2f* TS_CCALL tsVector2f_normalize(TSVector2f *ret, const TSVector2f *v);
TS_CAPI TSVector2d* TS_CCALL tsVector2d_normalize(TSVector2d *ret, const TSVector2d *v);
TS_CAPI TSVector2f* TS_CCALL tsVector2f_lerp(TSVector2f *ret, const TSVector2f *v0, const TSVector2f *v1, float32_t k);
TS_CAPI TSVector2d* TS_CCALL tsVector2d_lerp(TSVector2d *ret, const TSVector2d *v0, const TSVector2d *v1, float64_t k);
/*****************************************************************************\
 *
 * Vector3
 *
\*****************************************************************************/

/*
 */
typedef struct TSVector3i {
	union {
		struct {
			int32_t x, y, z;
		};
		struct {
			TSVector2i xy;
			int32_t xy_z;
		};
		int32_t v[3];
	};
} TSVector3i;
TS_CAPI TSVector3i* TS_CCALL tsVector3i_neg(TSVector3i *ret, const TSVector3i *v);
TS_CAPI TSVector3i* TS_CCALL tsVector3i_mul1(TSVector3i *ret, const TSVector3i *v0, int32_t v1);
TS_CAPI TSVector3i* TS_CCALL tsVector3i_div1(TSVector3i *ret, const TSVector3i *v0, int32_t v1);
TS_CAPI TSVector3i* TS_CCALL tsVector3i_add1(TSVector3i *ret, const TSVector3i *v0, int32_t v1);
TS_CAPI TSVector3i* TS_CCALL tsVector3i_sub1(TSVector3i *ret, const TSVector3i *v0, int32_t v1);
TS_CAPI TSVector3i* TS_CCALL tsVector3i_and1(TSVector3i *ret, const TSVector3i *v0, int32_t v1);
TS_CAPI TSVector3i* TS_CCALL tsVector3i_or1(TSVector3i *ret, const TSVector3i *v0, int32_t v1);
TS_CAPI TSVector3i* TS_CCALL tsVector3i_xor1(TSVector3i *ret, const TSVector3i *v0, int32_t v1);
TS_CAPI TSVector3i* TS_CCALL tsVector3i_shl1(TSVector3i *ret, const TSVector3i *v0, int32_t v1);
TS_CAPI TSVector3i* TS_CCALL tsVector3i_shr1(TSVector3i *ret, const TSVector3i *v0, int32_t v1);