plugins/binding/swift/include/TellusimObjCMath.h

/*****************************************************************************\
 *
 * Vector2
 *
\*****************************************************************************/

/*
 */
typedef struct TSVector2i {
	union {
		struct {
			int32_t x, y;
		};
		int32_t v[2];
	};
} TSVector2i;
typedef struct TSVector2u {
	union {
		struct {
			uint32_t x, y;
		};
		uint32_t v[2];
	};
} TSVector2u;
/*
 */
typedef TSVector2i Vector2i;
typedef TSVector2u Vector2u;
typedef TSVector2f Vector2f;
typedef TSVector2d Vector2d;
typedef struct TSVector3u {
	union {
		struct {
			uint32_t x, y, z;
		};
		struct {
			TSVector2u xy;
			uint32_t xy_z;
		};
		uint32_t v[3];
	};
} TSVector3u;
typedef struct TSVector3f {
	union {
		struct {
			float32_t x, y, z;
		};
		struct {
			TSVector2f xy;
			float32_t xy_z;
		};
		float32_t v[3];
	};
} TSVector3f;
typedef struct TSVector3d {
	union {
		struct {
			float64_t x, y, z;
		};
		struct {
			TSVector2d xy;
			float64_t xy_z;
		};
		float64_t v[3];
	};
} TSVector3d;
/*
 */
typedef TSVector3i Vector3i;
typedef TSVector3u Vector3u;
typedef TSVector3f Vector3f;
typedef TSVector3d Vector3d;
/*
 */
typedef TSVector4i Vector4i;
typedef TSVector4d Vector4d;