plugins/binding/csharp/source/TellusimCSMath.cs

		
		public Vector2f clamp(in Vector2f v0, in Vector2f v1) { Vector2f ret = new Vector2f(); tsVector2f_clamp(ref ret, in this, in v0, in v1); return ret; }
		public Vector2f saturate() { Vector2f ret = new Vector2f(); tsVector2f_saturate(ref ret, in this); return ret; }
		
		public static float dot(in Vector2f v0, in Vector2f v1) { return tsVector2f_dot(in v0, in v1); }
		public static float cross(in Vector2f v0, in Vector2f v1) { return tsVector2f_cross(in v0, in v1); }
		
		public float length() { return tsVector2f_length(in this); }
		public Vector2f normalize() { Vector2f ret = new Vector2f(); tsVector2f_normalize(ref ret, in this); return ret; }
		
		public static Vector2f lerp(in Vector2f v0, in Vector2f v1, float k) { Vector2f ret = new Vector2f(); tsVector2f_lerp(ref ret, in v0, in v1, k); return ret; }
		
		public override string ToString() { return System.String.Format("({0} {1})", x, y); }
		
		[DllImport(Base.Import)] private static extern IntPtr tsVector2f_abs(ref Vector2f ret, in Vector2f v);
		[DllImport(Base.Import)] private static extern IntPtr tsVector2f_neg(ref Vector2f ret, in Vector2f v);
		[DllImport(Base.Import)] private static extern IntPtr tsVector2f_mul1(ref Vector2f ret, in Vector2f v0, float v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector2f_div1(ref Vector2f ret, in Vector2f v0, float v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector2f_add1(ref Vector2f ret, in Vector2f v0, float v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector2f_sub1(ref Vector2f ret, in Vector2f v0, float v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector2f_mul(ref Vector2f ret, in Vector2f v0, in Vector2f v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector2f_div(ref Vector2f ret, in Vector2f v0, in Vector2f v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector2f_add(ref Vector2f ret, in Vector2f v0, in Vector2f v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector2f_sub(ref Vector2f ret, in Vector2f v0, in Vector2f v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector2f_min(ref Vector2f ret, in Vector2f v0, in Vector2f v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector2f_max(ref Vector2f ret, in Vector2f v0, in Vector2f v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector2f_clamp(ref Vector2f ret, in Vector2f v, in Vector2f v0, in Vector2f v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector2f_saturate(ref Vector2f ret, in Vector2f v);
		[DllImport(Base.Import)] private static extern float tsVector2f_dot(in Vector2f v0, in Vector2f v1);
		[DllImport(Base.Import)] private static extern float tsVector2f_cross(in Vector2f v0, in Vector2f v1);
		[DllImport(Base.Import)] private static extern float tsVector2f_length(in Vector2f v);
		[DllImport(Base.Import)] private static extern IntPtr tsVector2f_normalize(ref Vector2f ret, in Vector2f v);
		[DllImport(Base.Import)] private static extern IntPtr tsVector2f_lerp(ref Vector2f ret, in Vector2f v0, in Vector2f v1, float k);
		
		public static readonly Vector2f zero = new Vector2f(0.0f);
		public static readonly Vector2f oneX = new Vector2f(1.0f, 0.0f);
		public static readonly Vector2f oneY = new Vector2f(0.0f, 1.0f);
		public static readonly Vector2f one = new Vector2f(1.0f);
		
		public float x, y;
	}
	
	/*
	 */
	[StructLayout(LayoutKind.Sequential)]
	public struct Vector2d {
		
		public Vector2d(double v) { x = v; y = v; }
		public Vector2d(double x, double y) { this.x = x; this.y = y; }
		public Vector2d(in Vector2d v) { x = v.x; y = v.y; }
		public Vector2d(in Vector3d v) { x = v.x; y = v.y; }
		public Vector2d(in Vector4d v) { x = v.x; y = v.y; }
		public Vector2d(in Vector2i v) { x = (double)v.x; y = (double)v.y; }
		public Vector2d(in Vector2u v) { x = (double)v.x; y = (double)v.y; }
		public Vector2d(in Vector2f v) { x = (double)v.x; y = (double)v.y; }
		public Vector2d(in double[] v) { x = v[0]; y = v[1]; }
		
		public static Vector2d operator-(in Vector2d v) { Vector2d ret = new Vector2d(); tsVector2d_neg(ref ret, in v); return ret; }
		
		public static Vector2d operator*(in Vector2d v0, double v1) { Vector2d ret = new Vector2d(); tsVector2d_mul1(ref ret, in v0, v1); return ret; }
		public static Vector2d operator/(in Vector2d v0, double v1) { Vector2d ret = new Vector2d(); tsVector2d_div1(ref ret, in v0, v1); return ret; }
		public static Vector2d operator+(in Vector2d v0, double v1) { Vector2d ret = new Vector2d(); tsVector2d_add1(ref ret, in v0, v1); return ret; }
		public static Vector2d operator-(in Vector2d v0, double v1) { Vector2d ret = new Vector2d(); tsVector2d_sub1(ref ret, in v0, v1); return ret; }
		
		public static Vector2d operator*(in Vector2d v0, in Vector2d v1) { Vector2d ret = new Vector2d(); tsVector2d_mul(ref ret, in v0, in v1); return ret; }
		public static Vector2d operator/(in Vector2d v0, in Vector2d v1) { Vector2d ret = new Vector2d(); tsVector2d_div(ref ret, in v0, in v1); return ret; }
		public static Vector2d operator+(in Vector2d v0, in Vector2d v1) { Vector2d ret = new Vector2d(); tsVector2d_add(ref ret, in v0, in v1); return ret; }
		public static Vector2d operator-(in Vector2d v0, in Vector2d v1) { Vector2d ret = new Vector2d(); tsVector2d_sub(ref ret, in v0, in v1); return ret; }
		
		public Vector2d abs() { Vector2d ret = new Vector2d(); tsVector2d_abs(ref ret, in this); return ret; }
		
		public static Vector2d min(in Vector2d v0, in Vector2d v1) { Vector2d ret = new Vector2d(); tsVector2d_min(ref ret, in v0, in v1); return ret; }
		public static Vector2d max(in Vector2d v0, in Vector2d v1) { Vector2d ret = new Vector2d(); tsVector2d_max(ref ret, in v0, in v1); return ret; }
		
		public Vector2d clamp(in Vector2d v0, in Vector2d v1) { Vector2d ret = new Vector2d(); tsVector2d_clamp(ref ret, in this, in v0, in v1); return ret; }
		public Vector2d saturate() { Vector2d ret = new Vector2d(); tsVector2d_saturate(ref ret, in this); return ret; }
		
		public static double dot(in Vector2d v0, in Vector2d v1) { return tsVector2d_dot(in v0, in v1); }
		public static double cross(in Vector2d v0, in Vector2d v1) { return tsVector2d_cross(in v0, in v1); }
		
		public double length() { return tsVector2d_length(in this); }
		public Vector2d normalize() { Vector2d ret = new Vector2d(); tsVector2d_normalize(ref ret, in this); return ret; }
		
		public static Vector2d lerp(in Vector2d v0, in Vector2d v1, double k) { Vector2d ret = new Vector2d(); tsVector2d_lerp(ref ret, in v0, in v1, k); return ret; }
		
		public override string ToString() { return System.String.Format("({0} {1})", x, y); }
		
		[DllImport(Base.Import)] private static extern IntPtr tsVector2d_abs(ref Vector2d ret, in Vector2d v);
		[DllImport(Base.Import)] private static extern IntPtr tsVector2d_neg(ref Vector2d ret, in Vector2d v);
		[DllImport(Base.Import)] private static extern IntPtr tsVector2d_mul1(ref Vector2d ret, in Vector2d v0, double v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector2d_div1(ref Vector2d ret, in Vector2d v0, double v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector2d_add1(ref Vector2d ret, in Vector2d v0, double v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector2d_sub1(ref Vector2d ret, in Vector2d v0, double v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector2d_mul(ref Vector2d ret, in Vector2d v0, in Vector2d v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector2d_div(ref Vector2d ret, in Vector2d v0, in Vector2d v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector2d_add(ref Vector2d ret, in Vector2d v0, in Vector2d v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector2d_sub(ref Vector2d ret, in Vector2d v0, in Vector2d v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector2d_min(ref Vector2d ret, in Vector2d v0, in Vector2d v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector2d_max(ref Vector2d ret, in Vector2d v0, in Vector2d v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector2d_clamp(ref Vector2d ret, in Vector2d v, in Vector2d v0, in Vector2d v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector2d_saturate(ref Vector2d ret, in Vector2d v);
		[DllImport(Base.Import)] private static extern double tsVector2d_dot(in Vector2d v0, in Vector2d v1);
		[DllImport(Base.Import)] private static extern double tsVector2d_cross(in Vector2d v0, in Vector2d v1);
		[DllImport(Base.Import)] private static extern double tsVector2d_length(in Vector2d v);
		[DllImport(Base.Import)] private static extern IntPtr tsVector2d_normalize(ref Vector2d ret, in Vector2d v);
		[DllImport(Base.Import)] private static extern IntPtr tsVector2d_lerp(ref Vector2d ret, in Vector2d v0, in Vector2d v1, double k);
		
		public static readonly Vector2d zero = new Vector2d(0.0);
		public static readonly Vector2d oneX = new Vector2d(1.0, 0.0);
		public static readonly Vector2d oneY = new Vector2d(0.0, 1.0);
		public static readonly Vector2d one = new Vector2d(1.0);
		
		public double x, y;
	}
	
	/*****************************************************************************\
	 *
	 * Vector3
	 *
	\*****************************************************************************/
	
	/*
	 */
	[StructLayout(LayoutKind.Sequential)]
	public struct Vector3i {
		
		public Vector3i(int v) { x = v; y = v; z = v; }
		public Vector3i(int x, int y, int z) { this.x = x; this.y = y; this.z = z; }
		public Vector3i(in Vector2i v, int z) { x = v.x; y = v.y; this.z = z; }
		public Vector3i(in Vector3i v) { x = v.x; y = v.y; z = v.z; }
		public Vector3i(in Vector4i v) { x = v.x; y = v.y; z = v.z; }
		public Vector3i(in Vector3u v) { x = (int)v.x; y = (int)v.y; z = (int)v.z; }
		public Vector3i(in Vector3f v) { x = (int)v.x; y = (int)v.y; z = (int)v.z; }
		public Vector3i(in Vector3d v) { x = (int)v.x; y = (int)v.y; z = (int)v.z; }
		public Vector3i(in int[] v) { x = v[0]; y = v[1]; z = v[2]; }
		
		public static Vector3i operator-(in Vector3i v) { Vector3i ret = new Vector3i(); tsVector3i_neg(ref ret, in v); return ret; }
		
		public static Vector3i operator*(in Vector3i v0, int v1) { Vector3i ret = new Vector3i(); tsVector3i_mul1(ref ret, in v0, v1); return ret; }
		public static Vector3i operator/(in Vector3i v0, int v1) { Vector3i ret = new Vector3i(); tsVector3i_div1(ref ret, in v0, v1); return ret; }
		public static Vector3i operator+(in Vector3i v0, int v1) { Vector3i ret = new Vector3i(); tsVector3i_add1(ref ret, in v0, v1); return ret; }
		public static Vector3i operator-(in Vector3i v0, int v1) { Vector3i ret = new Vector3i(); tsVector3i_sub1(ref ret, in v0, v1); return ret; }
		public static Vector3i operator&(in Vector3i v0, int v1) { Vector3i ret = new Vector3i(); tsVector3i_and1(ref ret, in v0, v1); return ret; }
		public static Vector3i operator|(in Vector3i v0, int v1) { Vector3i ret = new Vector3i(); tsVector3i_or1(ref ret, in v0, v1); return ret; }
		public static Vector3i operator^(in Vector3i v0, int v1) { Vector3i ret = new Vector3i(); tsVector3i_xor1(ref ret, in v0, v1); return ret; }
		public static Vector3i operator<<(in Vector3i v0, int v1) { Vector3i ret = new Vector3i(); tsVector3i_shl1(ref ret, in v0, v1); return ret; }
		public static Vector3i operator>>(in Vector3i v0, int v1) { Vector3i ret = new Vector3i(); tsVector3i_shr1(ref ret, in v0, v1); return ret; }
